# PreFlight

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.simple.yml  docker-compose.yml  pyproject.toml  railway.toml  render.yaml
.github/workflows/: build.yml  ci.yml  deploy.yml
docs/: API.md  ARCHITECTURE.md  COMPETITIVE_ANALYSIS.md  DEPLOYMENT.md  FUTURE_ROADMAP.md  MODELS.md  QUICKSTART.md  SPEC.md
examples/: python_azure.py  python_textract.py
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/scripts/: screenshots.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/admin/: layout.tsx  page.tsx
frontend/src/app/admin/audit/: page.tsx
frontend/src/app/admin/errors/: page.tsx
frontend/src/app/admin/health/: page.tsx
frontend/src/app/admin/tenants/: page.tsx
frontend/src/app/dashboard/: layout.tsx  page.tsx
frontend/src/app/dashboard/api-keys/: page.tsx
frontend/src/app/dashboard/evaluations/: page.tsx
frontend/src/app/dashboard/settings/: page.tsx
frontend/src/app/dashboard/templates/: page.tsx
frontend/src/app/faq/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/security/: page.tsx
frontend/src/app/signup/: page.tsx
frontend/src/components/ui/: ASCIIDocumentViz.tsx  AnimatedCounter.tsx  Badge.tsx  Box.tsx  Button.tsx  DataFlowViz.tsx  GlitchText.tsx  Input.tsx  Loading.tsx  MatrixRain.tsx  Modal.tsx  Progress.tsx  PulseGlow.tsx  ScanLine.tsx  Sparkline.tsx  Table.tsx  TypewriterText.tsx  index.ts
frontend/src/lib/: AuthContext.tsx  api.ts  auth.ts
k8s/: configmap.yml  deployment.yml  hpa.yml  ingress.yml  namespace.yml  networkpolicy.yml  pdb.yml  secrets.yml  service.yml
migrations/: env.py
migrations/versions/: 001_initial_schema.py  002_add_users_table.py  003_add_extractor_providers.py  004_add_evaluation_indexes.py
scripts/: benchmark_evaluate.py  setup_benchmark_data.py  upgrade_enum_types.sql
src/: __init__.py  audit.py  config.py  db.py  metrics.py  models.py  security.py
src/analytics/: __init__.py
src/api/: __init__.py  admin_routes.py  auth.py  deps.py  errors.py  main.py  mappers.py  routes.py  user_auth.py
src/api/middleware/: __init__.py
src/api/routes/: __init__.py
src/audit/: __init__.py
src/core/: __init__.py
src/engine/: __init__.py
src/feedback/: __init__.py
src/infrastructure/: __init__.py
src/schema/: __init__.py
src/services/: __init__.py  correction_rules.py  drift_detector.py  lsh_index.py  lsh_utils.py  rate_limiter.py  reliability_scorer.py  safeguard_engine.py  template_matcher.py
src/workflows/: __init__.py  activities.py  document_processing.py  worker.py
tests/: conftest.py  test_correction_rules.py  test_drift_detector.py  test_rate_limiter.py  test_reliability_scorer.py  test_template_matcher.py
tests/fixtures/datasets/: __init__.py  funsd_loader.py  loader.py  sroie_loader.py  synthetic_documents.py
tests/integration/: __init__.py  test_api_auth.py  test_api_evaluate.py  test_api_health.py  test_api_metrics.py  test_api_templates.py  test_provider_handling.py  test_rls.py  test_template_matcher.py
tests/unit/: __init__.py  test_admin_routes.py  test_audit.py  test_auth.py  test_config.py  test_db.py  test_deps.py  test_lsh.py  test_main.py  test_mappers.py  test_metrics.py  test_models.py  test_models_extra.py  test_rate_limiter.py  test_routes.py  test_safeguards.py  test_security.py  test_user_auth.py  test_workflows.py
tests/validation/: __init__.py  conftest.py  test_template_matching_accuracy.py  test_threshold_calibration.py
