[project]
name = "control-plane"
version = "0.1.0"
description = "Document Extraction Control Plane - Metadata-only governance for enterprise extraction pipelines"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Proprietary"}
authors = [
    {name = "Control Plane Team"}
]

dependencies = [
    # API Framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",

    # Database (SQLModel = SQLAlchemy + Pydantic)
    "sqlmodel>=0.0.14",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",

    # Redis
    "redis>=5.0.0",

    # Temporal
    "temporalio>=1.4.0",

    # HTTP Client
    "httpx>=0.26.0",

    # Security
    "passlib[bcrypt]>=1.7.4",
    "PyJWT>=2.8.0",
    "bcrypt>=4.1.0",

    # Utilities
    "uuid7>=0.1.0",
    "structlog>=24.1.0",

    # Observability
    "prometheus-client>=0.19.0",
    "sentry-sdk[fastapi]>=1.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "factory-boy>=3.3.0",
    "faker>=22.0.0",
    # Security scanning
    "bandit>=1.7.0",
    "pip-audit>=2.6.0",
]
validation = [
    "datasets>=2.14.0",      # Hugging Face datasets (FUNSD, CORD, etc.)
    "Pillow>=10.0.0",        # Image processing for document images
    "matplotlib>=3.7.0",     # Plotting similarity distributions
]

[project.scripts]
controlplane = "src.api.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# Ruff configuration
[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B904",   # raise without from inside except
    "ARG001", # Unused function argument (false positive for FastAPI DI)
    "ARG002", # Unused method argument (false positive for pytest fixtures)
    "ARG003", # Unused class method argument (false positive for Pydantic validators)
    "SIM108", # Use ternary operator (style preference)
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "E402",   # Module level import not at top of file (needed for env setup in conftest)
    "F841",   # Local variable assigned but never used (mock patches need to stay in scope)
    "B007",   # Loop control variable not used (often in enumerate)
]

# Mypy configuration
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = false  # Too many false positives with SQLAlchemy/Redis
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "temporalio.*",
    "redis.*",
]
ignore_missing_imports = true

# SQLAlchemy, Redis, and Temporal modules have poor type stubs
[[tool.mypy.overrides]]
module = [
    "src.api.*",
    "src.services.*",
    "src.workflows.*",
    "src.security",
    "src.audit",
]
disable_error_code = ["arg-type", "attr-defined", "call-overload", "misc", "index", "operator", "type-arg", "union-attr", "assignment", "no-untyped-call"]

# Pytest configuration
[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = [
    "-v",
    "--tb=short",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html:coverage_html",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

# Coverage configuration
[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
